--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,9 @@
     <meta charset="UTF-8" />
 
     <!-- site info -->
-    <meta name="author" content="Jeremy Warner" />
-    <meta name="robots" content="index, follow" />
+    <meta name="author" content="{{ site.author.name }}" />
     <meta name="keywords" content="{{ site.keywords }}" />
+    <meta name="robots" content="index, follow" />
     <meta
       name="description"
       content="{% if page.desc %}{{ page.desc }}{% else %}{{ site.desc }}{% endif %}"
@@ -20,18 +20,12 @@
     <title>
       {% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}
     </title>
-    <link
-      rel="alternate"
-      type="application/rss+xml"
-      title="Jeremy Warner RSS"
-      href="/feed.xml"
-    />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" />
 
     <!-- Icons -->
-    <link rel="shortcut icon" href="/assets/img/favicon.ico" />
+    <link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/favicon.ico" />
 
     <!-- OpenGraph -->
     <meta property="og:site_name" content="{{ site.title }}" />
