--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -16,5 +16,5 @@ layout: default
   {% if page.title %}
   <h1 class="project-title">{{ page.title }}</h1>
   {% endif %} {{ content }}
-  <a href="/projects"> ← Back </a>
+  <a href="{{ site.baseurl }}/projects"> ← Back </a>
 </div>
