--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,10 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" />
 
     <!-- Icons -->
-    <link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/favicon.ico" />
+    <link
+      rel="shortcut icon"
+      href="{{ site.baseurl }}/assets/img/favicon.ico"
+    />
 
     <!-- OpenGraph -->
     <meta property="og:site_name" content="{{ site.title }}" />
