--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,5 +5,5 @@ layout: default
 <div class="page">
   {{ content }}
 
-  <a href="/"> ← Back </a>
+  <a href="{{ site.baseurl }}/"> ← Back </a>
 </div>
